name:                servant-snap
version:             0.10.0
synopsis:            A family of combinators for defining webservices APIs and serving them
description:
  Interpret a Servant API as a Snap server, using any Snaplets you like.
  .
  You can learn about the basics of servant in the Servant <https://haskell-servant.readthedocs.io tutorial>, and about the basics of Snap at the Snaplets <http://snapframework.com/docs/tutorials/snaplets-tutorial tutorial>
  .
  <https://github.com/haskell-servant/servant-snap/blob/master/example/greet.hs Here>
  is a runnable example, with comments, that defines a dummy API and implements
  a webserver that serves this API, using this package. One route delegates to the <https://hackage.haskell.org/package/snap/docs/Snap-Snaplet-Auth.html Auth> snaplet, another delegates to <https://hackage.haskell.org/package/snap/docs/Snap-Snaplet-Heist.html Heist>.
  .
  <https://github.com/haskell-servant/servant-snap/blob/master/CHANGELOG.md CHANGELOG>
homepage:            http://haskell-servant.github.io/
Bug-reports:         http://github.com/haskell-servant/servant-snap/issues
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari, Sönke Hahn, Julian K. Arni, Greg Hale
maintainer:          alpmestan@gmail.com imalsogreg@gmail.com
copyright:           2014 Zalora South East Asia Pte Ltd
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 9.6.7
extra-source-files:
  CHANGELOG.md
  README.md
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant-snap.git


library
  exposed-modules:
    Servant
    Servant.Server
    Servant.Server.Internal
    Servant.Server.Internal.PathInfo
    Servant.Server.Internal.BasicAuth
    Servant.Server.Internal.Context
    Servant.Server.Internal.Router
    Servant.Server.Internal.RoutingApplication
    Servant.Server.Internal.ServantErr
    Servant.Server.Internal.SnapShims
    Servant.Utils.StaticFiles
  build-depends:
        base               >= 4.14 && < 5
      , aeson              >= 1.5
      , attoparsec         >= 0.12
      , base64-bytestring  >= 1.0
      , bytestring         >= 0.10
      , case-insensitive   >= 1.2
      , containers         >= 0.5
      , filepath           >= 1
      , http-media         >= 0.7.1.2
      , http-types         >= 0.8
      , http-api-data      >= 0.2
      , io-streams         >= 1.3
      , network-uri        >= 2.6
      , mtl                >= 2.0
      , mmorph             >= 1
      , servant            >= 0.20
      , snap               >= 1.0
      , snap-core          >= 1.0
      , snap-server        >= 1.0
      , string-conversions >= 0.3
      , tagged             >= 0.8.5
      , text               >= 1.2
      , transformers       >= 0.3
      , word8              >= 0.1
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

executable snap-greet
  main-is: greet.hs
  hs-source-dirs: example
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends:
      aeson
    , base
    , bytestring
    , errors
    , heist
    , lens
    , servant
    , servant-snap
    , map-syntax
    , snap
    , snap-core
    , snap-server
    , text
    , transformers

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options:
    -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Servant.Utils.SnapTestUtils
    Servant.ServerSpec
    Servant.Server.CORSSpec
  build-depends:
      base               == 4.*
    , aeson
    , base64-bytestring
    , bytestring
    , case-insensitive
    , containers
    , directory
    , exceptions
    , hspec              >= 2.4.3   && < 2.8
    , hspec-core         >= 2.4.3   && < 2.8
    , hspec-snap         >= 1.0.1.0 && < 1.1
    , io-streams
    , lens
    , process
    , digestive-functors >= 0.8.4.0 && < 0.9
    , time
    , http-types
    , HUnit              >= 1.4
    , mtl
    , network            >= 2.6
    , QuickCheck
    , parsec
    , servant
    , servant-snap
    , snap
    , snap-core
    , snap-server
    , string-conversions
    , temporary
    , text
    , transformers
